--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 NODE_ENV = development
 JWT_SECRET = SLashCRM
-DB_MONGO_URL = mongodb+srv://crm:crm123@cluster0.11ituza.mongodb.net/?retryWrites=true&w=majority
+DB_MONGO_URL = *your mongo url*
 DB_MONGO = crm
